Null安全性／NPEの可能性の修正3